@@ -1,15 +1,15 @@
 Package: hydroGOF
 Type: Package
 Title: Goodness-of-fit functions for comparison of simulated and observed hydrological time series
-Version: 0.3-4-2
-Date: 2012-10-15
+Version: 0.3-4-3
+Date: 2012-10-18
 Author: Mauricio Zambrano-Bigiarini [aut, cre]
 Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email = "mauricio.zambrano@ing.unitn.it", role=c("aut", "cre") ) )
 Maintainer: Mauricio Zambrano Bigiarini <mauricio.zambrano@ing.unitn.it>
 Description: S3 functions implementing both statistical and graphical goodness-of-fit measures between observed and simulated values, mainly oriented to be used during the calibration, validation, and application of hydrological models. Missing values in observed and/or simulated values can be removed before computations. Comments / questions / collaboration of any kind are very welcomed.
 License: GPL (>=2)
 Depends: R (>= 2.10.0), zoo (>= 1.7-2)
-Imports: hydroTSM (>= 0.3-0), xts (>= 0.8-2), methods
+Imports: hydroTSM (>= 0.3-6), xts (>= 0.8-2), methods
 HowToCite: > citation("hydroGOF")
 URL: http://www.rforge.net/hydroGOF/, http://cran.r-project.org/web/packages/hydroGOF/
 BugReports: https://www.rforge.net/bugzilla/describecomponents.cgi?product=hydroGOF
